# ShiroiTilemap

./: CMakeLists.txt  README.md
include/: logging.h  tile.h  tilemap.h  types.h
src/: tile.cpp  tilemap.cpp
